20062024 update with validator, mapper0
