# src/main/java/org/quarkus/business/controller/ProductController.java
@@ -5,6 +5,9 @@ import jakarta.inject.Inject;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.core.Response;
 import org.bson.types.ObjectId;
+import org.modelmapper.ModelMapper;
+import org.openapitools.client.model.ProductRequestDTO;
+import org.openapitools.client.model.ProductResponseDTO;
 import org.quarkus.business.response.ResponseUtil;
 import org.quarkus.business.service.ProductService;
 
@@ -12,6 +15,9 @@ import org.quarkus.business.service.ProductService;
 import jakarta.ws.rs.*;
 import org.quarkus.business.document.Product;
 import org.quarkus.business.validator.ProductRequestValidator;
+
+import java.util.HashMap;
+import java.util.List;
 
 @Path("/api/v1/product")
 public class ProductController {
@@ -21,11 +27,16 @@ public class ProductController {
     ProductService productService;
 
     @Inject
+    ModelMapper modelMapper;
+
+    @Inject
     ProductRequestValidator productRequestValidator;
 
     @GET
     public Uni<Response> listProducts() {
         return productService.listProducts()
+                .onItem().transformToUni( products -> Uni.createFrom().item(products.stream().map(
+                        product -> modelMapper.map(product, ProductResponseDTO.class)).toList()))
                 .onItem().transform(ResponseUtil::buildResponseList)
                 .onFailure().recoverWithItem(ResponseUtil::handleError);
     }
@@ -39,8 +50,17 @@ public class ProductController {
     }
 
     @POST
-    public Uni<Response> saveProduct(Product product) {
+    public Uni<Response> saveProduct(ProductResponseDTO productRequestDTO) {
+
+        HashMap<String, List<String>> validationErrors = productRequestValidator.validate(productRequestDTO);
+        if (!validationErrors.isEmpty()) {
+            return Uni.createFrom().item(ResponseUtil.buildResponseHeaders(validationErrors));
+        }
+
+        Product product = modelMapper.map(productRequestDTO, Product.class);
+
         return productService.saveProduct(product)
+                .map(product1 -> modelMapper.map(product1, ProductRequestDTO.class))
                 .onItem().transform(ResponseUtil::buildResponseObject)
                 .onFailure().recoverWithItem(ResponseUtil::handleError);
     }
